# CosyVoiceCpp

./: CMakeLists.txt  README.md  command.json  spkdata.py
include/: cosyVoice.h  debugTools.h  onnx.h  tensorRT.h  tic_toc.h  tokenizer.h  toolFun.h
model/: spkInfo.jit  spkLines.json  to_trt.md
src/: cosyVoice.cpp  files.cpp  main.cpp  onnx.cpp  tensorRT.cpp  tokenizer.cpp  toolFun.cpp  zoptions.cpp  zquit.cpp  ztrace.cpp  ztracet.cpp
